fix: authentication fixed, telegrambot upgraded, added basic APIs for user, added ExceptionHandler